--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -36,7 +36,7 @@
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = \"D:\\\\UofT\\\\Week8\\\\Movies-ETL\\\\Class\"\n",
+    "file_dir = \"D:\\\\UofT\\\\Week8\\\\Movies-ETL\\\\Resources\"\n",
     "# Wikipedia data\n",
     "wiki_file = f'{file_dir}\\\\wikipedia_movies.json'\n",
     "# Kaggle metadata\n",
